--- a/docs/custom.css
+++ b/docs/custom.css
@@ -2,12 +2,29 @@
     width: 100%;
 }
 
+.md-content__inner.md-typeset > div.autodoc {
+    padding-left: 0;
+    border-left: none;
+}
+
 div.autodoc {
     padding-left: 25px;
-    border-left: 4px solid rgba(230, 230, 230);
+    border-left: 4px solid rgb(230, 230, 230);
 }
 
 table.codehilitetable {
     overflow: auto !important;
     max-height: 40vh !important;
+    margin-bottom: 0 !important;
+}
+
+details.note {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+details.note > summary {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    margin: 0;
 }
