--- a/docs/custom.css
+++ b/docs/custom.css
@@ -28,17 +28,17 @@ td p {
 
 
 /*Theme***************************************************************************************************************/
-:root {
-    /* Link and nav color */
-    --md-primary-fg-color: hsla(146, 73%, 42%, 1);
-    --md-primary-fg-color--light: hsl(146, 42%, 64%);
-    --md-primary-fg-color--dark: hsl(148, 54%, 41%);
+/*:root {*/
+/*    !* Link and nav color *!*/
+/*    --md-primary-fg-color: hsla(146, 73%, 42%, 1);*/
+/*    --md-primary-fg-color--light: hsl(146, 42%, 64%);*/
+/*    --md-primary-fg-color--dark: hsl(148, 54%, 41%);*/
 
-    /* Hover link and hover side nav */
-    --md-accent-fg-color: hsla(142, 99%, 60%, 1);
+/*    !* Hover link and hover side nav *!*/
+/*    --md-accent-fg-color: hsla(142, 99%, 60%, 1);*/
 
-    /* Heading color */
-    --md-code-fg-color: hsla(140, 18%, 24%, 1);
+/*    !* Heading color *!*/
+/*    --md-code-fg-color: hsla(140, 18%, 24%, 1);*/
 
-    --md-accent-fg-color--transparent: hsla(146, 73%, 42%, .07);
-}
+/*    --md-accent-fg-color--transparent: hsla(146, 73%, 42%, .07);*/
+/*}*/
